--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
         "phpspec/phpspec": "~2.1",
-        "lucadegasperi/oauth2-server-laravel": "5.0.*"
+        "lucadegasperi/oauth2-server-laravel": "5.0.*",
+        "laracasts/generators": "^1.1"
     },
     "autoload": {
         "classmap": [
